samples/_failures_safe/1761129838_e000bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e85554f3.c: In function ‘print_compression_stats’:
./samples/SAFE/__tmp_e85554f3.c:162:16: error: missing terminating " character
  162 |         printf("  Compression ratio:
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e85554f3.c:162:9: error: expected expression at end of input
  162 |         printf("  Compression ratio:
      |         ^~~~~~
./samples/SAFE/__tmp_e85554f3.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e85554f3.c:162:9: error: expected declaration or statement at end of input
